visual update, shifter issue fixed, hint issue fixed

--- a/client/src/components/GameBoard.css
+++ b/client/src/components/GameBoard.css
@@ -1,3 +1,27 @@
+
+::-webkit-scrollbar {
+    width: 10px;
+
+  }
+  
+
+::-webkit-scrollbar-track {
+background: transparent;
+}
+
+
+::-webkit-scrollbar-thumb {
+background: #888;
+border-radius: 30px;
+}
+
+
+::-webkit-scrollbar-thumb:hover {
+background: rgb(114, 114, 114);
+}
+
+
+
 .board{
     display: flex;
     padding: 2% 5%;
@@ -98,4 +122,28 @@ body {
     background-color: white;
     color: black;
     border-color: black;
+}
+
+.message{
+    height:50px;
+    color:rgb(255, 62, 62)
+}
+
+.time{
+    color: white;
+
+}
+
+.time-container{
+    position: sticky;
+    margin-right: 3rem;
+    margin-top: -3rem;
+    top:10px;
+    margin-left: auto;
+    width: 10%;
+    background-color: black;
+    height:50px;
+    padding: 0 2rem;
+    border-radius: 30px;
+    z-index: 999;
 }
